--- a/Concepts/SpringBootJDBC/src/main/resources/application.properties
+++ b/Concepts/SpringBootJDBC/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/Books
 spring.datasource.username=root
-spring.datasource..password=D
+spring.datasource..password=
 
 
 #ddl-auto : create : if the schema(table structure) exist, drop that structure and recreate it
