finished SpringBootJDBC project

--- a/Concepts/SpringBootJDBC/src/main/resources/application.properties
+++ b/Concepts/SpringBootJDBC/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/Books
 spring.datasource.username=root
-spring.datasource..password=Drfna9xt*
+spring.datasource..password=
 
 
 #ddl-auto : create : if the schema(table structure) exist, drop that structure and recreate it
@@ -22,3 +22,4 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 spring.jpa.properties.hibernate.enable_lazy_no_trans=true
+
