--- a/account/pom.xml
+++ b/account/pom.xml
@@ -9,11 +9,11 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.jasmine</groupId>
-	<artifactId>bookspringweb</artifactId>
+	<artifactId>account</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>bookspringweb</name>
-	<description>Book Project for Spring Web</description>
+	<name>account</name>
+	<description>Account Project for Spring Web</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -44,7 +44,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
-
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
