--- a/account/src/main/resources/application.properties
+++ b/account/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/wileyDI001
 spring.datasource.username=root
-spring.datasource..password=
+spring.datasource..password=Drfna9xt*
 
 
 #ddl-auto : create : if the schema(table structure) exist, drop that structure and recreate it
